--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
 	"dependencies": {
 		"babel-preset-env": "^1.7.0",
 		"commander": "^2.19.0",
-		"inspector": "^0.5.0"
+		"inquirer": "^6.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.1.2",
 		"@babel/preset-env": "^7.1.0",
-		"babel-cli": "^6.26.0"
+		"babel-cli": "^6.26.0",
+		"chai": "^4.2.0",
+		"mocha": "^5.2.0"
 	},
 	"scripts": {
 		"build": "babel src -d lib",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha"
 	},
 	"repository": {
 		"type": "git",
