--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "little_darrel",
 	"version": "1.0.0",
 	"description": "little_darrel",
-	"main": "Life.js",
+	"main": "src/Life.js",
 	"dependencies": {
 		"commander": "^2.19.0",
 		"inquirer": "^6.2.0"
@@ -12,7 +12,7 @@
 		"mocha": "^5.2.0"
 	},
 	"scripts": {
-		"start": "node Life",
+		"start": "node src/Life",
 		"test": "mocha"
 	},
 	"repository": {
